--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
 
     <!-- HomePage -->
     <div class="home">
-      <h1 class="home-title">Interactive Story</h1>
+      <h1 class="home-title">The Bear Quest</h1>
       <button class="home-button" type="button" name="button">Jouer</button>
+      <img class="home-bear" src="assets/characters/bear_home.png" alt="bear">
+      <img class="home-altPnj" src="assets/characters/altPnj_home.png" alt="alt-pnj">
+      <img class="home-pnj" src="assets/characters/pnj_home.png" alt="pnj">
     </div>
 
     <!-- Game -->
