--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- HomePage -->
     <div class="home">
       <h1 class="home-title">The Bear Quest</h1>
-      <button class="home-button" type="button" name="button">Jouer</button>
+      <button class="home-button" type="button" name="button">JOUER</button>
       <img class="home-bear" src="assets/characters/bear_home.png" alt="bear">
       <img class="home-altPnj" src="assets/characters/altPnj_home.png" alt="alt-pnj">
       <img class="home-pnj" src="assets/characters/pnj_home.png" alt="pnj">
@@ -28,6 +28,7 @@
       <!-- Decor -->
       <div class="decorInterface">
         <img src="assets/characters/bear1.png" class="decorInterface-pnj" alt="pnj">
+        <audio autoplay class="audio" src="assets/songs/home_song.mp3"></audio>
       </div>
 
       <!-- Text Area -->
